# ChangeLog for app-mobilephone/esms
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/esms/ChangeLog,v 1.1 2005/05/15 19:06:59 mrness Exp $

  15 May 2005; Alin Nastac <mrness@gentoo.org> metadata.xml:
  Moved from net-misc/esms to app-mobilephone/esms.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> esms-0.9.5.ebuild:
  Stable on ppc.

  14 Oct 2004; David Holm <dholm@gentoo.org> esms-0.9.5.ebuild:
  Added to ~ppc.

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> esms-0.9.5.ebuild:
  Add die following econf for bug 48950

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*esms-0.9.5 (14 May 2002)

  06 Jul 2002; phoen][x <phoenix@gentoo.org> ems-0.9.5.ebuild:
  Added KEYWORDS.

  01 JUN 2002; J.Alberto S.L. <bass@gentoo.org> ems-0.9.5.ebuild:
  Ebuild clean
  
  01 Jun 2002; Bruce A. Locke <blocke@shivan.org> ems-0.9.5.ebuild:
  Fixed circular dependency issue

  14 May 2002; J.Alberto S.L. <bass@gentoo.org> ems-0.9.5.ebuild:
	First relase.

  16 May 2002; J.Alberto S.L. <bass@gentoo.org> ems-0.9.5.ebuild:
  	Added gtk gui.